data/derived/sp14/progs/unify/prog2208.ml.out
Characters 218-255:
  | Times (ex1,ex2) -> exprToString ex1^"*"^exprToString ex2
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
